<resources>
    <string name="app_name">Cash Caretaker</string>
    <string name="add_account">Add Account</string>
    <string name="account_name">Account Name</string>
    <string name="starting_balance">Starting Balance</string>
    <string name="submit">Submit</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_first_account">Click the button below to add your first account.</string>
    <string name="add_first_transaction">Click the button below to add your first transaction.</string>
    <string name="add_first_repeating_transaction">Click the button below to add your first repeating transaction.</string>
    <string name="repeats">Repeats</string>
    <string name="account">Account</string>
    <string name="manage_repeating_transactions">Manage Repeating Transactions</string>
    <string name="title_activity_add_repeating_transaction">Add Repeating Transaction</string>
    <string name="action_settings">Settings</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="account_balance">Account Balance: {0, number, currency}</string>
    <string name="default_category">None</string>
    <string name="title_activity_manage_categories">Manage Categories</string>
    <string name="manage_categories">Manage Categories</string>
    <string name="delete_category">Delete Category</string>
    <string name="err_account_exists">Account name already exists.</string>
    <string name="err_account_blank">Account name cannot be blank.</string>
    <string name="err_starting_balance_blank">Starting balance cannot be blank.</string>
    <string name="title_activity_main">Cash Caretaker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="user_image">User Image</string>
</resources>
